--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -13,7 +13,7 @@
 
 
 <p:layout fullPage="true">
- 
+
     <p:layoutUnit position="north" size="100" header="Top" resizable="true" closable="true" collapsible="true">
         <h:outputText value="North unit content." />
     </p:layoutUnit>
@@ -32,23 +32,26 @@
         <pe:codeMirror id="codeMirror" theme="cobalt" style="height:auto;" 
      lineNumbers="true"  value="#{apiBean.apiWrapper.rawString}"
     matchBrackets="true" /> 
-    </h:form> 
+  </h:form>
      </h:panelGroup>
     </p:layoutUnit>
  
     <p:layoutUnit position="center" header="Center" >
+    
+     <h:form>
   
+   <p:inputTextarea value="#{apiBean.strUrl}" style="width:100%;" rows="2" />
   <h:panelGroup layout="block" id="graph">
   <p:chart type="line" model="#{apiBean.lineChart}" style="height:300px;" />
-<h:form>
+
 <p:poll interval="3" listener="#{apiBean.refresh}" update="graph rawString" />
-</h:form>
+
   </h:panelGroup>
         
 
-
+ </h:form>
     </p:layoutUnit>
- 
+
 </p:layout>
 
 
