--- a/src/main/webapp/dev/index.xhtml
+++ b/src/main/webapp/dev/index.xhtml
@@ -48,22 +48,31 @@
 						update=":#{p:component('graph')} :#{p:component('rawString')} :#{p:component('growl')}"
 						listener="#{apiBean.refresh}" />
 				</p:inputTextarea>
-
+				
 				<p:poll interval="#{apiBean.refreshInterval}"
-					listener="#{apiBean.refresh}" update="graph rawString growl"
-					rendered="#{apiBean.doUpdate}" />
+						listener="#{apiBean.refresh}" update="graph rawString growl"
+						rendered="#{apiBean.doUpdate}" />
 
 				<h:panelGroup layout="block" id="graph">
+					
 
-					<div class="chart-container"
-						style="position: relative; width: 100%">
-						<canvas id="myChart"></canvas>
-					</div>
+					<p:tabView dynamic="false" cache="false">
+						<p:tab title="Chart1">
+							<div class="chart-container"
+								style="position: relative; width: 100%">
+								<canvas id="myChart"></canvas>
+							</div>
 
-					<p:remoteCommand autoRun="true"
-						action="#{lineChartBean.retrieveLineChartData}"
-						oncomplete="drawLineChart(xhr,status,args);" />
+							<p:remoteCommand autoRun="true"
+								action="#{lineChartBean.retrieveLineChartData}"
+								oncomplete="drawLineChart(xhr,status,args);" />
 
+						</p:tab>
+						<p:tab title="Chart2">
+							<p:chart type="line" model="#{histChartBean.lineChart}"
+								style="height:300px;" />
+						</p:tab>
+					</p:tabView>
 					<p:dataTable id="myTable" var="lineResult"
 						value="#{apiBean.apiWrapper.rows}" paginatorAlwaysVisible="false"
 						paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink}"
