--- a/src/main/webapp/dev/index.xhtml
+++ b/src/main/webapp/dev/index.xhtml
@@ -16,7 +16,7 @@
 			resizable="true" closable="false" collapsible="true" collapsed="true">
 			<h:form>
 				<h:outputText value="Auto Update: " />
-				<p:inputSwitch value="#{apiBean.doUpdate}">
+				<p:inputSwitch value="#{apiBean.booleanUpdate}">
 					<p:ajax render=":#{p:component('graph')}" event="change" />
 				</p:inputSwitch>
 
@@ -51,7 +51,7 @@
 				
 				<p:poll interval="#{apiBean.refreshInterval}"
 						listener="#{apiBean.refresh}" update="graph rawString growl"
-						rendered="#{apiBean.doUpdate}" />
+						rendered="#{apiBean.booleanUpdate}" />
 
 				<h:panelGroup layout="block" id="graph">
 					
