--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,44 +15,39 @@
 		<p:layoutUnit position="west" size="200" header="Configuration"
 			resizable="true" closable="false" collapsible="true" collapsed="true">
 			<h:form>
-				<p:poll id="refreshPoll" interval="#{apiBean.refreshInterval}" stop="#{!apiBean.booleanUpdate}"
-					listener="#{apiBean.refreshIfPoll}" update=":#{p:component('graph')} :#{p:component('growl')} :#{p:component('rawString')}" />
+				<p:poll id="refreshPoll" interval="#{apiBean.refreshInterval}"
+					stop="#{!apiBean.booleanUpdate}"
+					listener="#{apiBean.refreshIfPoll}"
+					update=":#{p:component('graph')} :#{p:component('growl')} :#{p:component('rawString')}" />
 			</h:form>
 			<h:form>
 				<h:outputText value="Auto Update: " />
 				<p:inputSwitch value="#{apiBean.booleanUpdate}">
-					<p:ajax event="change" update=":#{p:component('refreshPoll')}"/>
+					<p:ajax event="change" update=":#{p:component('refreshPoll')}" />
 				</p:inputSwitch>
 
 				<h:outputText value="Refresh interval: " />
-				<p:inputText id="inputRefreshInterval" value="#{apiBean.refreshInterval}" />
+				<p:inputText id="inputRefreshInterval"
+					value="#{apiBean.refreshInterval}" />
 				<p:slider for="inputRefreshInterval" minValue="5" step="1">
-					<p:ajax event="slideEnd" listener="#{apiBean.onSlideEnd_RefreshInterval}"/>
+					<p:ajax event="slideEnd"
+						listener="#{apiBean.onSlideEnd_RefreshInterval}" />
 				</p:slider>
 			</h:form>
 		</p:layoutUnit>
 
-		<p:layoutUnit position="east" size="40%"
-			style="height:100%;" resizable="true" closable="false"
-			collapsible="true" effect="drop">
+		<p:layoutUnit position="east" size="40%" style="height:100%;"
+			resizable="true" closable="false" collapsible="true" effect="drop">
 
 			<p:tabView dynamic="false" cache="false">
+
 				<p:tab title="Query">
-					<p:growl id="growl" showDetail="true" />
-					<h:panelGrid columns="1" style="display:block;width:100%">
-						<h:outputText id="range" value="#{queryBean.function}"/>
-                        <h:inputHidden id="rangetxt" value="#{queryBean.functionIndex}" />
-						<p:slider for="rangetxt" style="width: 100%"  step="1" maxValue="#{queryBean.functionsSizeIndexed}">
-							<p:ajax event="slideEnd" listener="#{queryBean.onSlideEnd}"
-								update="range growl" />
-						</p:slider>
-					</h:panelGrid>
-			
-					<h:form>
-						<p:remoteCommand name="RefreshCommand" actionListener="#{apiBean.refresh}" />
-						<p:commandButton type="button" onclick="RefreshCommand()" value="Refresh" icon="ui-icon-refresh" />
-					</h:form>
+					<h:panelGroup id="queryContentPanel">
+						<!-- <ui:include src="#{apiBean.currentQueryPageName}.xhtml" /> -->
+						<ui:include src="query/yahoo.xhtml" />
+					</h:panelGroup>
 				</p:tab>
+
 				<p:tab title="Response">
 					<h:panelGroup layout="block" id="rawString">
 						<pre>#{apiBean.apiWrapper.rawString}</pre>
